gcc/testsuite/g++.dg/parse/operator4.C
int operator *(int, ...); // { dg-error ".int operator\\*\\(int, ...\\). must have an argument of class or enumerated type" }
